examples/test/testpolicy11561.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11561
  namespace: namespace166
spec:
  podSelector:
    matchLabels:
      key47: value20
      key46: value21
      key49: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value49
          key25: value36
      podSelector:
        matchLabels:
          key47: value47
          key39: value5
          key5: value12
